--- a/modulo1/css-labetube/style.css
+++ b/modulo1/css-labetube/style.css
@@ -2,12 +2,17 @@
     display: grid;
 }
 
+#container2{
+    display: grid;
+}
+
 header {
     background-color: orange;
     display: flex;
     justify-content: space-between;
     height: 10vh;
     align-items: center;
+    font-size: 75px;
 }
 
 button{
@@ -25,12 +30,15 @@ main{
                          '. . . .'
 }
 
+.main{
+    background-color: black;
+}
+
 .video1{
     grid-area: v1;
     border: 1px solid green;
     margin-top: 10px;
     margin-left: 10px;
-    /* display: flex; */
     justify-content: center;
 }
 
@@ -80,4 +88,19 @@ footer {
     height: 10vh;
     align-items: center;
     display: flex;
+    font-size: 75px; 
+    margin-bottom: 0px;
+} 
+
+.v1{
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 100px;
+    margin-left: 350px;
+}
+
+h1{
+    margin-left: 350px;
 }
